# CUDA-120-DAYS--CHALLENGE-elaboration

solutions/: README.md
solutions/day1/: main.cu
solutions/day2/: CMakeLists.txt  Makefile
solutions/day2/include/: kernels.cuh  kernels.h
solutions/day2/src/: kernels.cu  main.cu
solutions/day3/: CMakeLists.txt
solutions/day3/src/: main_cpu.c  main_gpu.cu
solutions/day4/: CMakeLists.txt  README.md
solutions/day4/include/: cuda_utils.h  matrix.h  matrix_operations_kernels.cuh
solutions/day4/src/: matrix.cpp  matrix_add.cu  matrix_mult.cu  matrix_operations_kernels.cu  test.cpp  vector_add.cu
solutions/day5/: CMakeLists.txt  README.md
solutions/day5/src/: main.cu
